# emergent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: release.yml  workflow-crates-io.yml  workflow-go-proxy.yml  workflow-jsr.yml  workflow-pypi.yml
config/: emergent-go.toml  emergent.toml
config/advanced-examples/: README.md
config/advanced-examples/game-of-life/: emergent.toml  index.html  world.py
config/advanced-examples/reaction-diffusion/: emergent.toml  index.html  world.rs
config/advanced-examples/system-monitor/: dashboard.html  emergent.toml  index.html  metric_formatter.py
config/examples/: README.md  basic-pipeline.toml  ouroboros-loop.toml  slack-bot.toml  websocket-echo.toml
docker/: .dockerignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  emergent.toml.example
docker/config/: emergent.toml
docs/: audience-analysis.md  concepts.md  configuration.md  examples.md  getting-started.md  local-deployment.md  topology.md
docs/primitives/: handlers.md  sinks.md  sources.md
docs/sdks/: go.md  python.md  rust.md  typescript.md
docs/superpowers/plans/: 2026-03-15-emergent-fotw.md  2026-03-15-voice-claude-twilio-pipeline.md
docs/superpowers/specs/: 2026-03-15-emergent-fotw-design.md  2026-03-15-voice-claude-twilio-design.md
emergent-client/: Cargo.toml
emergent-client/src/: connection.rs  error.rs  lib.rs  message.rs  stream.rs
emergent-engine/: Cargo.toml
emergent-engine/src/: config.rs  lib.rs  main.rs  messages.rs  primitive_actor.rs  primitives.rs  process_manager.rs  update.rs
emergent-engine/src/event_store/: json_log.rs  mod.rs  sqlite.rs
emergent-engine/src/init/: cli.rs  mod.rs  template.rs
emergent-engine/src/marketplace/: cli.rs  error.rs  installer.rs  mod.rs  platform.rs  registry.rs  storage.rs
emergent-engine/src/scaffold/: cli.rs  handler.rs  messages.rs  mod.rs  sink.rs  source.rs  templates.rs
emergent-engine/templates/init/: emergent.toml.j2
emergent-engine/templates/python/handler/: main.py.j2
emergent-engine/templates/python/sink/: main.py.j2  pyproject.toml.j2
emergent-engine/templates/python/source/: main.py.j2  pyproject.toml.j2
emergent-engine/templates/rust/handler/: Cargo.toml.j2  main.rs.j2
emergent-engine/templates/rust/sink/: Cargo.toml.j2  main.rs.j2
emergent-engine/templates/rust/source/: Cargo.toml.j2  main.rs.j2
emergent-engine/templates/typescript/handler/: deno.json.j2  main.ts.j2
emergent-engine/templates/typescript/sink/: main.ts.j2
emergent-engine/templates/typescript/source/: deno.json.j2  main.ts.j2
emergent-primitives/: .gitignore  Cargo.toml  README.md
emergent-registry/: README.md  index.toml
emergent-registry/primitives/exec-source/: manifest.toml
emergent-registry/primitives/github-sink/: manifest.toml
emergent-registry/primitives/github-source/: manifest.toml
emergent-registry/primitives/http-sink/: manifest.toml
emergent-registry/primitives/http-source/: manifest.toml
emergent-registry/primitives/slack-sink/: manifest.toml
emergent-registry/primitives/slack-source/: manifest.toml
examples/console_sink/: Cargo.toml
examples/console_sink/src/: main.rs
examples/console_sink_deno/: deno.json  emergent_client.ts  main.ts
examples/filter_handler/: Cargo.toml
examples/filter_handler/src/: main.rs
examples/handlers/exec/: Cargo.toml
examples/handlers/exec/src/: main.rs
examples/handlers/filter/: Cargo.toml
examples/handlers/filter-go/: go.mod  go.sum  main.go
examples/handlers/filter/src/: main.rs
examples/handlers/topology-api/: main.ts
examples/log_sink/: Cargo.toml
examples/log_sink/src/: main.rs
examples/sinks/console/: Cargo.toml
examples/sinks/console-go/: go.mod  main.go
examples/sinks/console/src/: main.rs
examples/sinks/console_color/: main.ts
examples/sinks/log/: Cargo.toml
examples/sinks/log/src/: main.rs
examples/sinks/topology-viewer/: graph.ts  main.ts
examples/sinks/topology-viewer/static/: app.js  index.html  style.css
examples/sinks/webhook_console/: main.py
examples/sources/timer/: Cargo.toml
examples/sources/timer-go/: go.mod  main.go
examples/sources/timer/src/: main.rs
examples/sources/topology-api/: main.ts
examples/sources/webhook/: main.py  pyproject.toml
examples/timer_source/: Cargo.toml
examples/timer_source/src/: main.rs
sdks/go/: README.md  client.go  emergent.go  errors.go  errors_test.go  go.mod  handler.go  helpers.go  helpers_test.go  ipc_types.go  logger.go  message.go  message_test.go  protocol.go  protocol_test.go  publish_stream_test.go  sink.go  source.go  stream.go  stream_test.go  system_events.go  system_events_test.go  types.go  types_test.go  validate.go  validate_test.go
sdks/py/: .gitignore  README.md  pyproject.toml
sdks/py/emergent/: __init__.py  _client.py  _protocol.py  errors.py  handler.py  helpers.py  message.py  sink.py  source.py  stream.py  types.py
sdks/py/tests/: __init__.py  test_message.py  test_protocol.py  test_publish_stream.py  test_stream.py  test_types.py  test_unwrap_stdout.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: connection.rs  helpers.rs  lib.rs  message.rs  prelude.rs  stream.rs  subscribe.rs
sdks/rust/src/types/: causation_id.rs  correlation_id.rs  message_id.rs  message_type.rs  mod.rs  primitive_name.rs  system_events.rs  timestamp.rs
sdks/rust/tests/: publish_stream.rs
sdks/ts/: README.md  deno.json  mod.ts  package.json
sdks/ts/src/: client.ts  handler.ts  logger.ts  message.ts  protocol.ts  sink.ts  source.ts  types.ts
