[workspace]
resolver = "2"
members = [
    "emergent-engine",
    "sdks/rust",
    "examples/sources/timer",
    "examples/handlers/filter",
    "examples/sinks/log",
    "examples/sinks/console",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/govcraft/emergent"
authors = ["Govcraft <info@govcraft.ai>"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Configuration
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
mti = "1.1.1"

# Error handling
thiserror = "2"
anyhow = "1"

# acton-reactive
acton-reactive = { version = "7.1.0", features = ["ipc", "ipc-messagepack"] }
