[package]
name = "emergent-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Event-based workflow engine with emergent behaviors"

[[bin]]
name = "emergent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rmp-serde.workspace = true
toml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mti.workspace = true
thiserror.workspace = true
anyhow.workspace = true
acton-reactive.workspace = true

# Local dependencies
emergent-client = { path = "../emergent-client" }

# Additional dependencies
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.30.1", features = ["signal"] }
clap = { version = "4.5.53", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
