[package]
name = "emergent-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Event-based workflow engine with emergent behaviors"

[[bin]]
name = "emergent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rmp-serde.workspace = true
toml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mti.workspace = true
thiserror.workspace = true
anyhow.workspace = true
acton-reactive.workspace = true

# Local dependencies
emergent-client = { path = "../sdks/rust" }

# Additional dependencies
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.30.1", features = ["signal"] }
clap = { version = "4.5.53", features = ["derive"] }

# Scaffold dependencies
minijinja = "2"
dialoguer = "0.11"
heck = "0.5"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
flate2 = "1.1.8"
tar = "0.4.44"
zip = "7.1.0"
sha2 = "0.10.9"
hex = "0.4.3"
indicatif = "0.18.3"
tempfile = "3.23.0"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
