[package]
name = "filter_handler"
description = "Example filter handler for Emergent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "filter_handler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
emergent-client = { version = "0.1.0", path = "../../emergent-client" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
