[package]
name = "emergent-client"
description = "Client library for Emergent event-based workflow platform"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
acton-reactive.workspace = true
directories = "6.0.0"
futures = "0.3.31"
mti.workspace = true
rmp-serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio-stream = "0.1.18"
