[package]
name = "filter"
description = "Example filter handler for Emergent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "filter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
emergent-client = { version = "0.5.0", path = "../../../sdks/rust" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
